@@ -626,10 +626,19 @@ class tslib_gifBuilder extends t3lib_stdGraphic {
 	 */
 	function fileName($pre)	{
 
+		$meaningfulPrefix = '';
+
+		if ($GLOBALS['TSFE']->config['config']['meaningfulTempFilePrefix']) {
+			$meaningfulPrefix = implode('_', array_merge($this->combinedTextStrings, $this->combinedFileNames));
+				// strip everything non-ascii
+			$meaningfulPrefix = preg_replace('/[^A-Za-z0-9_-]/', '', trim($meaningfulPrefix));
+			$meaningfulPrefix = substr($meaningfulPrefix, 0, intval($GLOBALS['TSFE']->config['config']['meaningfulTempFilePrefix'])) . '_';
+		}
+
 			// WARNING: In PHP5 I discovered that rendering with freetype of Japanese letters was totally corrupt. Not only the wrong glyphs are printed but also some memory stack overflow resulted in strange additional chars - and finally the reason for this investigation: The Bounding box data was changing all the time resulting in new images being generated all the time. With PHP4 it works fine.
 		return $this->tempPath.
 				$pre.
-				($GLOBALS['TSFE']->config['config']['meaningfulTempFilePrefix'] ? $GLOBALS['TSFE']->fileNameASCIIPrefix(implode('_',array_merge($this->combinedTextStrings,$this->combinedFileNames)),intval($GLOBALS['TSFE']->config['config']['meaningfulTempFilePrefix']),'_') : '').
+				$meaningfulPrefix .
 				t3lib_div::shortMD5(serialize($this->setup)).
 				'.'.$this->extension();
 	}
